--- a/content/product-edit.html
+++ b/content/product-edit.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Chỉnh sửa sản phẩm</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.css" integrity="sha512-TMfSkU8+T1p8U/raPBnh5UQgmi2OwEDEJh8TUS7UZv2H5eHdOKWyUMhChMFS+T6e1pWoygc2f9rBGeJq79zfjQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -44,21 +45,6 @@
       font-size: 16px;
     }
 
-    .drop-area {
-      border: 2px dashed #bbb;
-      padding: 20px;
-      text-align: center;
-      margin-top: 15px;
-      border-radius: 8px;
-      background-color: #fffaf2;
-      color: #888;
-    }
-
-    .drop-area.hover {
-      background-color: #f0e8de;
-      border-color: #999;
-    }
-
     #preview {
       margin-top: 15px;
       max-width: 100%;
@@ -67,6 +53,12 @@
       border: 1px solid #ccc;
       padding: 4px;
       border-radius: 4px;
+    }
+
+    .dz-message {
+      text-align: center;
+      color: #888;
+      font-size: 14px;
     }
 
     button {
@@ -106,126 +98,95 @@
     <label>Số lượng</label>
     <input type="number" id="quantity" required>
 
-    <label>Ảnh minh họa (dán link hoặc kéo ảnh vào)</label>
+    <label>Link ảnh (sẽ được cập nhật tự động sau khi tải ảnh)</label>
     <input type="text" id="images" placeholder="https://..." required>
 
-    <div class="drop-area" id="drop-area">📥 Kéo ảnh mới vào đây</div>
+    <label>Ảnh minh họa</label>
+    <div id="my-dropzone" class="dropzone"></div>
     <img id="preview" alt="Xem trước ảnh">
 
     <button type="submit">💾 Cập nhật sản phẩm</button>
   </form>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.js" integrity="sha512-/GFKNX0yglJizfQgZJzOrZKPI+X0/y9XrCo8h2n/YIoTkK6OGvXb+YI+qJSWdyL6LdnAIKwGweF7n0CZViWmmA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
-  const id = new URLSearchParams(window.location.search).get('id');
+    Dropzone.autoDiscover = false;
 
-  const nameInput = document.getElementById('name');
-  const priceInput = document.getElementById('price');
-  const quantityInput = document.getElementById('quantity');
-  const imagesInput = document.getElementById('images');
-  const preview = document.getElementById('preview');
+    const id = new URLSearchParams(window.location.search).get('id');
 
-  async function fetchData() {
-    const res = await fetch(`https://backend-7j0i.onrender.com/products/${id}`);
-    const p = await res.json();
-    nameInput.value = p.name || '';
-    priceInput.value = p.price || 0;
-    quantityInput.value = p.quantity || 0;
-    imagesInput.value = p.images || '';
-    if (p.images) {
-      preview.src = p.images;
-      preview.style.display = 'block';
+    const nameInput = document.getElementById('name');
+    const priceInput = document.getElementById('price');
+    const quantityInput = document.getElementById('quantity');
+    const imagesInput = document.getElementById('images');
+    const preview = document.getElementById('preview');
+
+    async function fetchData() {
+      const res = await fetch(`https://backend-7j0i.onrender.com/products/${id}`);
+      const p = await res.json();
+      nameInput.value = p.name || '';
+      priceInput.value = p.price || 0;
+      quantityInput.value = p.quantity || 0;
+      imagesInput.value = p.images || '';
+      if (p.images) {
+        preview.src = p.images;
+        preview.style.display = 'block';
+      }
     }
-  }
 
-  document.getElementById('edit-form').addEventListener('submit', async (e) => {
-    e.preventDefault();
+    document.getElementById('edit-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
 
-    const data = {
-      name: nameInput.value,
-      price: parseFloat(priceInput.value),
-      quantity: parseInt(quantityInput.value),
-      images: imagesInput.value
-    };
+      const data = {
+        name: nameInput.value,
+        price: parseFloat(priceInput.value),
+        quantity: parseInt(quantityInput.value),
+        images: imagesInput.value
+      };
 
-    const res = await fetch(`https://backend-7j0i.onrender.com/products/${id}`, {
-      method: 'PUT',
-      headers: {
-        'Content-Type': 'application/json'
-        // Nếu có token, bạn có thể thêm Authorization vào đây.
-      },
-      body: JSON.stringify(data)
+      const res = await fetch(`https://backend-7j0i.onrender.com/products/${id}`, {
+        method: 'PUT',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+      });
+
+      if (res.ok) {
+        alert('✅ Đã cập nhật sản phẩm!');
+        window.location.href = '/index.html';
+      } else {
+        alert('❌ Cập nhật thất bại');
+      }
     });
 
-    if (res.ok) {
-      alert('✅ Đã cập nhật sản phẩm!');
-      window.location.href = '/index.html';
-    } else {
-      alert('❌ Cập nhật thất bại');
-    }
-  });
-const dropArea = document.getElementById('drop-area');
-
-// Xử lý drag
-dropArea.addEventListener("dragover", (e) => {
-  e.preventDefault();
-  dropArea.classList.add("hover");
-});
-
-dropArea.addEventListener("dragleave", () => {
-  dropArea.classList.remove("hover");
-});
-
-dropArea.addEventListener("drop", async (e) => {
-  e.preventDefault();
-  dropArea.classList.remove('hover');
-  // ...
-});
-  // Drag and drop ảnh
-  dropArea.addEventListener("drop", async (e) => {
-  e.preventDefault();
-  dropArea.classList.remove('hover');
-
-  const file = e.dataTransfer.files[0];
-  if (file && file.type.startsWith('image/')) {
-    // Đọc file thành base64
-    const reader = new FileReader();
-    reader.onload = async function (event) {
-      const base64data = event.target.result.split(',')[1]; // Lấy phần base64 (bỏ "data:image/xxx;base64,")
-
-      try {
-        // Gửi lên API upload ảnh của bạn
-        const res = await fetch('https://backend-7j0i.onrender.com/upload', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({
-            filename: file.name,
-            contentBase64: base64data
-          }),
+    // Dropzone cấu hình Cloudinary
+    const myDropzone = new Dropzone("#my-dropzone", {
+      url: "https://api.cloudinary.com/v1_1/YOUR_CLOUD_NAME/image/upload",
+      method: "post",
+      paramName: "file",
+      maxFiles: 1,
+      acceptedFiles: "image/*",
+      addRemoveLinks: true,
+      init: function () {
+        this.on("sending", function (file, xhr, formData) {
+          formData.append("upload_preset", "YOUR_UPLOAD_PRESET");
         });
 
-        const json = await res.json();
-        if (res.ok && json.url) {
-          imagesInput.value = json.url; // Gán link ảnh trả về
-          preview.src = json.url;
-          preview.style.display = 'block';
-        } else {
-          alert('❌ Upload ảnh thất bại');
-        }
-      } catch (err) {
-        alert('❌ Lỗi khi upload ảnh: ' + err.message);
+        this.on("success", function (file, response) {
+          const imageUrl = response.secure_url;
+          imagesInput.value = imageUrl;
+          preview.src = imageUrl;
+          preview.style.display = "block";
+        });
+
+        this.on("error", function (file, errorMessage) {
+          alert("❌ Upload thất bại: " + errorMessage);
+        });
       }
-    };
-    reader.readAsDataURL(file);
-  } else {
-    alert('❗ Vui lòng chọn tệp ảnh hợp lệ');
-  }
-});
+    });
 
-  // Gọi API để load dữ liệu ban đầu
-  fetchData();
-</script>
-
+    // Gọi API để lấy dữ liệu sản phẩm hiện tại
+    fetchData();
+  </script>
 </body>
 </html>
