--- a/about.html
+++ b/about.html
@@ -6,19 +6,26 @@
   <title>Chi Tiết Sản Phẩm</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
-</head>
-    <nav class="navbar">
-    <div class="logo">MintShop</div>
-    <div class="nav-links" id="nav-auth-links">
-      <!-- render bằng JS -->
-    </div>
-    </nav>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       background-color: #f4f1ec;
       color: #3e2c23;
+    }
+
+    .navbar {
+      background-color: #fff;
+      padding: 15px 40px;
+      display: flex;
+      justify-content: space-between;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .logo {
+      font-size: 26px;
+      font-weight: bold;
+      color: #5a3c2e;
     }
 
     .container {
@@ -41,13 +48,12 @@
     }
 
     .product-info {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: space-between;
-  position: relative;
-  padding-bottom: 20px;
-}
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 20px;
+    }
+
     .product-name {
       font-size: 30px;
       font-weight: bold;
@@ -57,6 +63,7 @@
     .product-price {
       font-size: 22px;
       color: #a0522d;
+      margin: 10px 0;
     }
 
     .product-about {
@@ -65,25 +72,116 @@
       color: #4b3621;
     }
 
+    .quantity-group {
+      margin: 15px 0;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
 
+    .quantity-group label {
+      font-size: 16px;
+      font-weight: 500;
+      color: #5a3c2e;
+    }
+
+    .quantity-group input[type="number"] {
+      width: 60px;
+      padding: 6px 8px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+
+    .btn-group {
+      display: flex;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .btn-group button,
+    .btn-group a {
+      padding: 10px 20px;
+      background-color: #a0522d;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    #view-cart-btn {
+      position: fixed;
+      top: 15px;
+      right: 20px;
+      background-color: #d2691e;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 8px;
+      font-size: 14px;
+      z-index: 999;
+      cursor: pointer;
+    }
+
+    #cart-modal {
+      position: fixed;
+      right: 20px;
+      top: 60px;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+      width: 300px;
+      display: none;
+      z-index: 1000;
+    }
+
+    #cart-items {
+      list-style: none;
+      padding: 0;
+      margin: 10px 0;
+    }
+
+    #cart-items li {
+      margin-bottom: 10px;
+    }
+
+    .summary {
+      font-weight: bold;
+      margin: 10px 0;
+    }
+
+    #cart-modal button {
+      width: 100%;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
+
+<nav class="navbar">
+  <div class="logo">MintShop</div>
+  <div class="nav-links" id="nav-auth-links">
+    <!-- render bằng JS -->
+  </div>
+</nav>
+
 <button id="view-cart-btn">🛒 Giỏ hàng (<span id="cart-count">0</span>)</button>
 
-  <div id="cart-modal">
-    <h3>🛒 Giỏ hàng của bạn</h3>
-    <ul id="cart-items"></ul>
-    <div class="summary">Tổng cộng: <span id="cart-total">0₫</span></div>
-    <button id="checkout-btn">Thanh toán</button>
-    <button id="close-cart-btn">Đóng</button>
-  </div>
-  <div class="container" id="product-detail">
-    <p>Đang tải thông tin sản phẩm...</p>
-  </div>
+<div id="cart-modal">
+  <h3>🛒 Giỏ hàng của bạn</h3>
+  <ul id="cart-items"></ul>
+  <div class="summary">Tổng cộng: <span id="cart-total">0₫</span></div>
+  <button id="checkout-btn">Thanh toán</button>
+  <button id="close-cart-btn">Đóng</button>
+</div>
 
-  <!-- THÊM DÒNG NÀY TRƯỚC THẺ </body> -->
-<script src="scripts.js"></script>
+<div class="container" id="product-detail">
+  <p>Đang tải thông tin sản phẩm...</p>
+</div>
+
 <script>
   const container = document.getElementById('product-detail');
   const urlParams = new URLSearchParams(window.location.search);
@@ -98,19 +196,21 @@
           <div class="product-info">
             <div class="product-name">${product.name}</div>
             <div class="product-price">${product.price.toLocaleString()}₫</div>
-            <div class="product-about">
-              ${product.about}
+            <div class="product-about">${product.about}</div>
+
+            <div class="quantity-group">
+              <label for="quantity">Số lượng:</label>
+              <input type="number" id="quantity" min="1" value="1" />
             </div>
+
             <div class="btn-group">
               <button class="add-to-cart"
-                onclick="addToCart('${product.name}', ${product.price}, '${product.images}', '${product._id}')">
+                onclick="addToCart('${product.name}', ${product.price}, '${product.imageUrl}', '${product._id}')">
                 🛒 Thêm vào giỏ
               </button>
               <a href="index.html" class="back-btn">← Quay lại trang chính</a>
             </div>
-
-
-          
+          </div>
         `;
       })
       .catch(err => {
@@ -120,7 +220,50 @@
   } else {
     container.innerHTML = '<p>Không tìm thấy sản phẩm.</p>';
   }
-</script>
 
+  function addToCart(name, price, image, id) {
+    const quantity = parseInt(document.getElementById('quantity').value) || 1;
+    const cart = JSON.parse(localStorage.getItem('cart')) || [];
+
+    const existing = cart.find(item => item.id === id);
+    if (existing) {
+      existing.quantity += quantity;
+    } else {
+      cart.push({ id, name, price, image, quantity });
+    }
+
+    localStorage.setItem('cart', JSON.stringify(cart));
+    updateCartDisplay();
+    alert(`Đã thêm ${quantity} sản phẩm vào giỏ!`);
+  }
+
+  function updateCartDisplay() {
+    const cart = JSON.parse(localStorage.getItem('cart')) || [];
+    const cartCount = cart.reduce((total, item) => total + item.quantity, 0);
+    document.getElementById('cart-count').textContent = cartCount;
+
+    const cartItemsEl = document.getElementById('cart-items');
+    cartItemsEl.innerHTML = '';
+    let total = 0;
+    cart.forEach(item => {
+      total += item.price * item.quantity;
+      const li = document.createElement('li');
+      li.textContent = `${item.name} x${item.quantity} - ${(item.price * item.quantity).toLocaleString()}₫`;
+      cartItemsEl.appendChild(li);
+    });
+
+    document.getElementById('cart-total').textContent = total.toLocaleString() + '₫';
+  }
+
+  document.getElementById('view-cart-btn').addEventListener('click', () => {
+    document.getElementById('cart-modal').style.display = 'block';
+  });
+
+  document.getElementById('close-cart-btn').addEventListener('click', () => {
+    document.getElementById('cart-modal').style.display = 'none';
+  });
+
+  updateCartDisplay(); // Khởi động khi vào trang
+</script>
 </body>
 </html>
